2007-05-15 Boyd Timothy <btimothy@gmail.com>

        * configure.ac: Add support for po/LINGUAS file.
	* po/LINGUAS: New file to allow translators to add a new language
	  without having to modify trunk/configure.ac directly.

2007-05-15  Calvin Gaisford <calvinrg@gmail.com> 

        * Banter/Account.cs, Banter/Person.cs, Banter/Conversation.cs: Changed
          the ArrayList to a new and modern List using generics
        * Banter/Connection.cs, Banter/VideoConversation.cs,
          Banter/PersonList.cs, Banter/TelepathyProviderFactory.cs,
          Banter/MemberList.cs, Banter/Member.cs, Banter/MessageEngine.cs,
          Banter/TelepathyProvider.cs: Deleted the file and removed from svn.
          It's no longer used.

2007-05-15  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Bump the version to 0.1.3.

2007-05-15  David Lodge <dave@cirt.net>

	* configure.ac: Added en_GB to ALL_LINGUAS

2007-05-14  Boyd Timothy <btimothy@gmail.com> 

	* Makefile.am: Use the correct Makefile.am for the top-level
	  directory.  This should allow anyone checking out the code
	  to build.

2007-05-14  Daniel Nylander <po@danielnylander.se>

	* configure.ac: Added 'sv' to ALL_LINGUAS.

2007-05-14  Calvin Gaisford <calvinrg@gmail.com>

	* NEWS: Updated for 0.1.2.

2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs: Moved updateproviderusers to be public so the
	  PersonStore can call it after creating persons
	* Banter/PersonStore.cs: Updated creation of persons so the
	  updateProviderUsers is called
	* Banter/ProviderUserManager.cs: Added an event that is fired when new
	  users are added
	* Banter/PersonSync.cs: Added code to sync ProviderUsers into EDS

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/AccountManagement.cs: Hack to disconnect tapioca connections
	* Banter/Application.cs: Change to call Account Management to cleanup
	  connections

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/ChatWindow.cs: remove debug