@@ -59,6 +59,8 @@
     <File name="./Banter/ProviderUser.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/Presence.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/PersonSync.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Banter/ContactStyle.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Banter/AppStyle.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
